--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <footer class="footer">
     <p class="footer__attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="footer__link">Frontend Mentor</a>. 
-      Coded by <a href="#" target="_blank" class="footer__link">Souleymane DIALLO</a>.
+      Coded by <a href="https://github.com/souleymane-diallo/Recipe-page" target="_blank" class="footer__link">Souleymane DIALLO</a>.
     </p>
   </footer>
 </body>
